--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=eclass
 DB_USERNAME=root
-DB_PASSWORD=muhammad
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
